tests/typechecker/pass/025-for.hyg
let mutable i: int = 0;
for (();  i < 10; i <- i + 1)
    print(i);

for (i <- 1; i < 10; false)
    print(i)